# life_game

./: LICENSE  life_game.cabal
src/: Main.hs
